updated calcultor.html with random fix

--- a/calcultor.html
+++ b/calcultor.html
@@ -10,9 +10,9 @@
     <body>
 		<h1> Calculator Dapp</h1>
 		<div class="inpu">
-        <label for="fname">First number:</label>
+        <label >First number:</label>
         <input type="number" id="a">
-        <label for="fname">Second number:</label>
+        <label >Second number:</label>
         <input type="number" id="b">
 	</div>
 	<div class="funfun">
